--- a/Project/.classpath
+++ b/Project/.classpath
@@ -9,5 +9,6 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_281/jre/lib/ext/mysql-connector-java-5.1.49.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
